--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "express": "^4.16.4",
     "http-status": "^1.3.2",
     "joi": "^14.3.1",
+    "lodash": "^4.17.11",
     "mongoose": "^5.5.4"
   }
 }
