--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "config": "^3.1.0",
     "express": "^4.16.4",
     "http-status": "^1.3.2",
     "joi": "^14.3.1",
